--- a/themes/photowall/static/css/main.css
+++ b/themes/photowall/static/css/main.css
@@ -13,6 +13,7 @@
 @import url("pygment.css");
 @import url("typogrify.css");
 @import url(//fonts.googleapis.com/css?family=Yanone+Kaffeesatz&subset=latin);
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&display=swap');
 
 /***** Global *****/
 /* Body */
@@ -40,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
-    font-family: 'Yanone Kaffeesatz', arial, serif;
+    font-family: 'Arvo', serif;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
